## [Unreleased]
### Added
- Support deserializing from owned values

## [0.2.0] - 2021-04-28
### Added
- Comparaison function between `MessyJsonValue` and `serde_json::Value`
- `MessyJsonObjectValue` and `MessyJsonArrayValue` to facilitate describing a document that MUST be either an object/an array
- `MessyJsonObject` can be `into` `MessyJson` without further allocation
- `MessyJsonObject` has a its own builder object
- New trait added to factorize the common points between `MessyJsonObjectBuilder` and `MessyJsonBuilder`
- Added a setting object to the builder allowing for more nuanced deserializing
- Added the `Hash` trait on schema objects
- Added support for `uuid` behind a feature flag
- Every keys are `ArcStr`

### Changed
- `MessyJson` and `MessyJsonObject` now take a lifetime argument
- No need for lifetime anymore, everything is shared using `Arc`

### Removed
- `MessyJson::Null` is no longer available

### Changed
- `MessyJsonValue::Null` contains a reference to the deserializing schema
## [0.1.0] - 2021-02-03
### Added
- 🎉 first release!